[build-system]
requires = ["scikit-build-core>=0.9", "pybind11>=2.11", "numpy"]
build-backend = "scikit_build_core.build"

[project]
name = "merlin"
version = "0.1.2"
#author = "Sebastian Lueneburg"
#author-email = "sebastian.lueneburg@gmail.com"
description = "Merlin Python extension (pybind11 + CUDA)"
requires-python = ">=3.8"
dependencies = ["numpy"]

[tool.scikit-build]
build.verbose = true
# A list of args to pass to CMake when configuring the project.
cmake.args = ["-G Ninja"]
cmake.source-dir = "../.."

# The build type to use when building the project.
cmake.build-type = "Release"

